--- a/tasks/node/aws/aws.main.node.yml
+++ b/tasks/node/aws/aws.main.node.yml
@@ -41,6 +41,7 @@
 
 - name: "{{ inner_service_title }} - aws node - execute"
   vars:
+    ext_node_state: "{{ (ext_node_item.state == 'present') | ternary('running', ext_node_item.state) }}"
     ext_node_subnet_id_default: "{{ ext_node_subnet_info.subnets[0].subnet_id | default('') }}"
     ext_node_subnet_id: >-
       {{
@@ -49,7 +50,7 @@
       }}
   community.aws.ec2_instance:
     name: "{{ ext_node_item.name }}"
-    state: "{{ ext_node_item.state }}"
+    state: "{{ ext_node_state }}"
     access_key: "{{ ext_node_item.access_key }}"
     secret_key: "{{ ext_node_item.secret_key }}"
     image_id: "{{ ext_node_item.image_id }}"
@@ -73,7 +74,7 @@
   loop: "{{ ext_node_data_wrapper.data.list }}"
   loop_control:
     loop_var: ext_node_item
-    label: "[{{ ext_node_item.state }}] {{ ext_node_item.name }}"
+    label: "[{{ ext_node_state }}] {{ ext_node_item.name }}"
   register: ext_node_details
   no_log: "{{ env_no_log }}"
 
