--- a/tasks/dns/aws/aws.main.dns.yml
+++ b/tasks/dns/aws/aws.main.dns.yml
@@ -11,21 +11,40 @@
   no_log: "{{ env_no_log }}"
   tags: ["no_print"]
 
-- name: "{{ inner_service_title }} - aws dns (route53) - main"
+- name: "{{ inner_service_title }} - aws dns (route53) - create zone"
+  community.aws.route53_zone:
+    state: "present"
+    access_key: "{{ ext_dns_item.access_key }}"
+    secret_key: "{{ ext_dns_item.secret_key }}"
+    zone: "{{ ext_dns_item.zone }}"
+  loop: "{{ ext_dns_data_wrapper.data.zones }}"
+  loop_control:
+    loop_var: ext_dns_item
+    label: "{{ ext_dns_item.zone }}"
+  no_log: "{{ env_no_log }}"
+
+- name: "{{ inner_service_title }} - aws dns (route53) - create records"
   community.aws.route53:
     state: "{{ ext_dns_item.state }}"
     access_key: "{{ ext_dns_item.access_key }}"
     secret_key: "{{ ext_dns_item.secret_key }}"
     zone: "{{ ext_dns_item.zone }}"
     type: "{{ ext_dns_item.dns_type }}"
-    record: "{{ ext_dns_item.record | default(omit, true) }}"
+    record: >-
+      {{
+        ((ext_dns_item.record | default('@', true)) == '@')
+        | ternary(
+            ext_dns_item.zone,
+            ext_dns_item.record + '.' + ext_dns_item.zone
+          )
+      }}
     value: "{{ ext_dns_item.value | default(omit, true) }}"
     ttl: "{{ ext_dns_item.ttl | default(omit, true) }}"
     weight: "{{ ext_dns_item.weight | default(omit, true) }}"
     overwrite: true
     wait: true
     wait_timeout: 300
-  loop: "{{ ext_dns_data_wrapper.data.list }}"
+  loop: "{{ ext_dns_data_wrapper.data.records }}"
   loop_control:
     loop_var: ext_dns_item
     label: >-
